--- a/Amigos/Amigos/Base.lproj/Main.storyboard
+++ b/Amigos/Amigos/Base.lproj/Main.storyboard
@@ -156,48 +156,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="War-Ol-dGg">
-                                <rect key="frame" x="11" y="83" width="182" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Search: Documents">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FM1-Pb-sFu">
-                                <rect key="frame" x="8" y="125" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wJK-Z9-aQt">
-                                <rect key="frame" x="256" y="125" width="58" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Search">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="q7Q-25-6DW">
+                                <rect key="frame" x="0.0" y="63" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <scopeButtonTitles>
+                                    <string>Title</string>
+                                    <string>Title</string>
+                                </scopeButtonTitles>
                                 <connections>
-                                    <segue destination="IUA-Wz-c36" kind="push" identifier="SeguePushPatentsTableViewController" id="mc7-lV-StX"/>
+                                    <outlet property="delegate" destination="5CY-XH-EwH" id="pl4-T1-g1F"/>
                                 </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M0j-mO-oWr">
-                                <rect key="frame" x="201" y="83" width="113" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Search Settings">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="jRP-6f-cph" kind="push" identifier="SeguePushAdvanceSearchSettingsTableViewController" id="38Y-Cu-rov"/>
-                                </connections>
-                            </button>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Amigos" id="Ffe-9s-8F0">
-                        <barButtonItem key="leftBarButtonItem" title="Login" id="Snh-l4-cWc">
+                        <barButtonItem key="leftBarButtonItem" systemItem="organize" id="QXb-Wi-wdc">
                             <connections>
-                                <segue destination="Rdx-2S-nYr" kind="push" identifier="SeguePushLoginViewController" id="Gmh-6i-k6e"/>
+                                <segue destination="jRP-6f-cph" kind="push" identifier="AdvanceSearchSettingsTableViewController" id="aQD-1j-kIw"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="bookmarks" id="bhM-Eq-Z1r">
@@ -206,10 +183,22 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="searchDisplayController" destination="8bL-ma-bhM" id="bH6-b7-7bB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y6J-NM-Oq9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="8bL-ma-bhM">
+                    <connections>
+                        <outlet property="delegate" destination="5CY-XH-EwH" id="OdF-ik-Wr6"/>
+                        <outlet property="searchBar" destination="q7Q-25-6DW" id="MUE-44-aak"/>
+                        <outlet property="searchContentsController" destination="5CY-XH-EwH" id="mHO-uI-0sS"/>
+                        <outlet property="searchResultsDataSource" destination="5CY-XH-EwH" id="mte-Te-3w9"/>
+                        <outlet property="searchResultsDelegate" destination="5CY-XH-EwH" id="nLW-sU-25L"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="354" y="58"/>
+            <point key="canvasLocation" x="400" y="52"/>
         </scene>
         <!--Advance Search Settings Table View Controller - Advance Search Settings-->
         <scene sceneID="Mk8-17-Cwv">
@@ -334,7 +323,4 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
-    <inferredMetricsTieBreakers>
-        <segue reference="mc7-lV-StX"/>
-    </inferredMetricsTieBreakers>
 </document>
